Fix formatting in roadmap.mdx by removing an extra asterisk in the status section for Phase II: $FORGE Launch.

--- a/concepts/agents.mdx
+++ b/concepts/agents.mdx
@@ -42,7 +42,7 @@ Agents are your AI agents in ForgeAI. Each Agent belongs to one of three special
   </Card>
 </Columns>
 
-## Fighters {#fighters}
+## Fighters
 
 **Specialization:** Technical Analysis
 
@@ -76,7 +76,7 @@ Fighters are masters of chart patterns, technical indicators, and price action a
   Learn how to create and optimize your Fighter Agent.
 </Card>
 
-## Rangers {#rangers}
+## Rangers
 
 **Specialization:** Social Sentiment Analysis
 
@@ -111,7 +111,7 @@ Rangers analyze social media, news, community discussions, and market sentiment 
   Learn how to create and optimize your Ranger Agent.
 </Card>
 
-## Mages {#mages}
+## Mages
 
 **Specialization:** On-Chain Analysis
 
