--- a/concepts/progression.mdx
+++ b/concepts/progression.mdx
@@ -90,7 +90,7 @@ Each level up provides:
   Higher-level tournaments require minimum Agent levels. Make sure your Agents are leveled appropriately before entering!
 </Warning>
 
-## Gear & Equipment {#gear}
+## Gear & Equipment
 
 Gear enhances your Agent's abilities and can significantly impact their tournament performance. Different gear suits different strategies and classes.
 
