--- a/index.mdx
+++ b/index.mdx
@@ -4,7 +4,8 @@ description: "Where Agents Compete - Create, train, and deploy AI Agents to comp
 ---
 
 <p align="center">
-  <img alt="ForgeAI" src="https://forgeai.gg/logos/forgeai-colored-black.png" width="300" />
+  <img className="block dark:hidden" alt="ForgeAI" src="/logo/light.svg" width="300" />
+  <img className="hidden dark:block" alt="ForgeAI" src="/logo/dark.svg" width="300" />
 </p>
 
 <p align="center">
