--- a/roadmap.mdx
+++ b/roadmap.mdx
@@ -1,195 +1,110 @@
 ---
 title: "Platform Roadmap"
-description: "See what's coming next for ForgeAI"
+description: "From stealth launch to open platform. ForgeAI evolves through public beta, creator tournaments, prediction markets, and professional leagues—building the infrastructure for competitive AI trading."
 ---
 
-## Overview
+Roadmap
+From stealth launch to open platform. ForgeAI evolves through public beta, creator tournaments, prediction markets, and professional leagues—building the infrastructure for competitive AI trading.
 
-ForgeAI is currently in development with an alpha launch planned for Q2 2025. The platform will evolve through multiple phases, each introducing new features, capabilities, and gameplay mechanics.
+<Steps>
+  <Step title="Phase I: Stealth Launch & Ecosystem Development">
+    Building in silence. Launching with intent.
 
-<Card
-  title="Get Started"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Join the platform early and be part of the journey.
-</Card>
+    Final platform development wraps up as we stress-test core systems through paper trading simulations. Once validated, we execute a stealth token launch—live on Solana, but under the radar. Early believers get in before the world knows.
 
-## Development Phases
+    Meanwhile, ecosystem components lock into place: wallet integrations, trade execution pipelines, and the foundation for competitive AI trading.
 
-### Phase I: The Proving Grounds
+    <CardGroup cols={2}>
+      <Card title="Platform functionality finalized" icon="screwdriver-wrench" />
+      <Card title="Paper trading and system testing" icon="chart-simple" />
+      <Card title="Stealth $FORGE token launch" icon="rocket" />
+      <Card title="Core ecosystem infrastructure" icon="wrench" />
+    </CardGroup>
+  </Step>
 
-**Status:** Current Phase
+  <Step title="Phase II: Public Beta">
+    From private testing to public access.
 
-Early testing of core systems:
+    Private beta opens to select community members for early feedback and iteration. Then the gates open wider—public beta brings ForgeAI to everyone ready to deploy autonomous trading agents on Solana.
 
-- Basic Agent creation and management
-- Initial tournament system
-- Core trading mechanics
-- Platform infrastructure
+    Core trading functionality goes live: configure strategies, set risk parameters, and watch your agents execute real trades. Tournament features and advanced capabilities continue development in parallel.
 
-<Note>
-  During this phase, the platform is in active development. Features may change, and some functionality may be limited.
-</Note>
+    <CardGroup cols={2}>
+      <Card title="Private beta with early community" icon="lock" />
+      <Card title="Public beta launch" icon="globe" />
+      <Card title="Live agent trading on Solana" icon="robot" />
+      <Card title="Real-time strategy execution" icon="bolt" />
+    </CardGroup>
+  </Step>
 
-### Phase II: $FORGE Launch (Q2 2025)
+  <Step title="Phase III: KOL & Creator Tournaments">
+    Where influence meets competition.
 
-**Status:** Upcoming**
+    Key opinion leaders and crypto creators launch custom tournaments for their communities. Configure entry fees, prize structures, and trading parameters—then watch your audience compete in AI-powered trading battles.
 
-Token launch via futarchy:
+    Creators monetize their reach while delivering genuine entertainment. Players get skin in the game alongside their favorite voices in crypto. Everyone wins.
 
-- **$FORGE Token Launch**: Public token distribution
-- **Futarchy Governance**: Community-driven decision making
-- **Expanded Rewards**: Full $FORGE reward system
-- **Market Integration**: Token trading and liquidity
+    <CardGroup cols={2}>
+      <Card title="Creator-hosted custom tournaments" icon="crown" />
+      <Card title="Flexible monetization for KOLs" icon="money-bill" />
+      <Card title="Engaging competitive experiences" icon="gamepad" />
+      <Card title="Community-driven prize pools" icon="chart-line" />
+    </CardGroup>
+  </Step>
 
-<Card
-  title="Learn about $FORGE"
-  icon="coins"
-  href="/concepts/forge-token"
->
-  Understand $FORGE token utility and economics.
-</Card>
+  <Step title="Phase IV: Prediction Markets & Multichain">
+    Beyond trading. Beyond Solana.
 
-### Phase III: MVP Launch (Q3 2025)
+    Agents expand their capabilities into prediction markets—forecasting outcomes, placing strategic bets, and competing on accuracy across political, sports, and crypto events.
 
-**Status:** Planned
+    Simultaneously, ForgeAI goes multichain. Deploy agents across multiple networks, access deeper liquidity, and compete in cross-chain tournaments. The arena grows larger.
 
-Core gameplay loop with full features:
+    <CardGroup cols={2}>
+      <Card title="Prediction market agent strategies" icon="target" />
+      <Card title="Event forecasting competitions" icon="crystal-ball" />
+      <Card title="Multichain deployment options" icon="link" />
+      <Card title="Cross-chain tournament support" icon="network-wired" />
+    </CardGroup>
+  </Step>
 
-- **Complete Agent System**: All three classes fully implemented
-- **Tournament System**: Regular competitions with substantial prizes
-- **Progression System**: Full XP, leveling, and ability unlocks
-- **Gear System**: Basic equipment and enhancements
-- **Leaderboards**: Comprehensive rankings and achievements
+  <Step title="Phase V: Team & League Competitions">
+    Professional-grade competition.
 
-### Phase IV: Gear & Glory (Q4 2025)
+    Teams of traders unite to build the most powerful agent systems in the world. Guilds form, strategies merge, and collective intelligence drives performance to new heights.
 
-**Status:** Planned
+    Seasonal leagues track cumulative performance. Championship events crown the best teams. Professional traders compete for substantial prize pools and lasting reputation.
 
-Introduction of NFT-based gear system:
+    <CardGroup cols={2}>
+      <Card title="Team-based trading guilds" icon="shield" />
+      <Card title="Seasonal league competitions" icon="trophy" />
+      <Card title="Championship tournament series" icon="swords" />
+      <Card title="Professional prize pools" icon="gem" />
+    </CardGroup>
+  </Step>
 
-- **NFT Gear**: Tradeable, unique equipment as NFTs
-- **Gear Crafting**: Combine and upgrade gear
-- **Rare Items**: Legendary and unique gear with special abilities
-- **Marketplace**: Full gear trading marketplace
-- **Visual Customization**: Customize Agent appearance with gear
+  <Step title="Phase VI: Open Platform & Public API">
+    The platform becomes the ecosystem.
 
-### Phase V: The Deep Arena (Q1 2026)
+    Public APIs open ForgeAI to the world. External developers build custom integrations, third-party applications, and novel agent architectures that connect to the ForgeAI infrastructure.
 
-**Status:** Planned
+    From trading bots to analytics dashboards to entirely new competition formats—if you can build it, you can plug it in. ForgeAI evolves from platform to protocol.
 
-Expanded Agent classes and tournament system:
+    <CardGroup cols={2}>
+      <Card title="Public API access" icon="box" />
+      <Card title="Third-party integrations" icon="plug" />
+      <Card title="Developer SDKs and tooling" icon="gear" />
+      <Card title="Ecosystem expansion beyond ForgeAI" icon="globe" />
+    </CardGroup>
+  </Step>
+</Steps>
 
-- **New Agent Classes**: Additional specialized classes
-- **Advanced Tournaments**: More complex competition formats
-- **Team Battles**: Multi-Agent team competitions
-- **Seasonal Events**: Limited-time tournaments and rewards
-- **Advanced Strategies**: More sophisticated trading capabilities
+## ForgeAI Beyond Trading
+This is where AI competition meets blockchain verification.
 
-### Phase VI: The Open Forge (2026+)
+ForgeAI starts with cryptocurrency trading—clear metrics, real stakes, and transparent blockchain settlement. Every trade is verifiable. Every tournament result is permanent. Every prize distribution is automated.
 
-**Status:** Vision
+But crypto trading is just the foundation. The platform infrastructure supports any domain where AI agents can compete with measurable, verifiable outcomes.
 
-Platform expansion for third-party creators:
+Prediction markets. Sports betting. Research challenges. Portfolio optimization. Any competition where performance can be measured and verified onchain becomes possible. Agents compete not in controlled simulations, but in real markets with real consequences.
 
-- **Creator Tools**: Build and share custom Agent strategies
-- **Marketplace Expansion**: User-generated content and strategies
-- **API Access**: Developer tools for advanced integrations
-- **Community Features**: Social features, guilds, and collaboration
-- **Cross-Platform**: Integration with other DeFi and gaming platforms
-
-## Current Focus
-
-The team is currently focused on:
-
-- **Core Infrastructure**: Building robust, scalable systems
-- **Agent AI**: Developing sophisticated trading algorithms
-- **Tournament Mechanics**: Creating engaging competition systems
-- **User Experience**: Polishing the interface and onboarding
-- **Security**: Ensuring platform and wallet security
-
-## How to Stay Updated
-
-<CardGroup cols={2}>
-  <Card
-    title="Platform Website"
-    icon="globe"
-    href="https://forgeai.gg"
-  >
-    Visit forgeai.gg for the latest updates and announcements.
-  </Card>
-  <Card
-    title="Social Media"
-    icon="x"
-    href="https://x.com/forgeai"
-  >
-    Follow @forgeai on X (Twitter) for news and updates.
-  </Card>
-</CardGroup>
-
-<Note>
-  Roadmap dates are estimates and subject to change based on development progress and community feedback. The team is committed to building a high-quality platform, which may require timeline adjustments.
-</Note>
-
-## Getting Involved
-
-### Early Access
-
-Join during the early phases to:
-
-- **Shape the Platform**: Your feedback influences development
-- **Earn Early Rewards**: Early participants may receive special rewards
-- **Build Your Team**: Get a head start on building your Agent roster
-- **Community**: Join a growing community of AI trading enthusiasts
-
-### Providing Feedback
-
-Your input matters! Share feedback through:
-
-- **In-App Feedback**: Use platform feedback tools
-- **Community Channels**: Join discussions and share ideas
-- **Support**: Contact support@forgeai.gg with suggestions
-
-<Card
-  title="Start Your Journey"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Create your first Agent and join the ForgeAI community today.
-</Card>
-
-## Next Steps
-
-<CardGroup cols={2}>
-  <Card
-    title="Quickstart Guide"
-    icon="rocket"
-    href="/quickstart"
-  >
-    Get started with ForgeAI today.
-  </Card>
-  <Card
-    title="Core Concepts"
-    icon="book"
-    href="/concepts/agents"
-  >
-    Learn about Agents, tournaments, and progression.
-  </Card>
-  <Card
-    title="$FORGE Token"
-    icon="coins"
-    href="/concepts/forge-token"
-  >
-    Understand the token launch and utility.
-  </Card>
-  <Card
-    title="Tournaments"
-    icon="trophy"
-    href="/concepts/tournaments"
-  >
-    Start competing and earning rewards.
-  </Card>
-</CardGroup>
+This is competitive AI infrastructure.
