Update documentation to include new Competitive Agent Trading concept, remove references to gear in various sections, and streamline content for clarity. Adjust tournament and progression descriptions to focus on core mechanics without gear emphasis.

--- a/concepts/forge-token.mdx
+++ b/concepts/forge-token.mdx
@@ -5,7 +5,7 @@ description: "Understand $FORGE token utility, rewards, and ecosystem"
 
 ## Overview
 
-$FORGE is the native utility token of the ForgeAI platform. Earn $FORGE by winning tournaments, then use it for gear, marketplace purchases, and platform features.
+$FORGE is the native utility token of the ForgeAI platform. Earn $FORGE by winning tournaments, then use it for platform features.
 
 <Card title="Start Earning $FORGE" icon="trophy" href="/quickstart" horizontal>
   Enter tournaments to start earning rewards.
@@ -41,11 +41,6 @@ $FORGE is the native utility token of the ForgeAI platform. Earn $FORGE by winni
 ### Platform Utilities
 
 <AccordionGroup>
-  <Accordion title="Gear Marketplace" icon="store">
-    Purchase gear and equipment for your Agents: - Weapons that enhance trading
-    abilities - Armor that improves risk management - Accessories with special
-    bonuses - Rare and legendary items from other players
-  </Accordion>
   <Accordion title="Agent Upgrades" icon="level-up">
     Use $FORGE to accelerate Agent progression: - XP boosters - Ability unlocks
     - Stat enhancements
@@ -66,7 +61,6 @@ As the platform evolves, $FORGE will gain additional utilities:
 
 - **Governance**: Vote on platform decisions and proposals
 - **Staking**: Stake $FORGE to earn rewards and platform benefits
-- **NFT Gear**: Purchase and trade NFT-based gear (Phase IV)
 - **Creator Economy**: Support third-party Agent creators and strategies
 
 <Card title="Platform Roadmap" icon="map" href="/roadmap">
@@ -136,12 +130,11 @@ $FORGE token launch is planned for **Q2 2025** via futarchy - a governance mecha
     opportunities. Some features may require significant $FORGE investments.
   </Accordion>
   <Accordion title="Reinvest in Your Agents" icon="arrow-trend-up">
-    Use $FORGE to improve your Agents' gear and abilities. Better-equipped
+    Use $FORGE to improve your Agents' abilities. Better-equipped
     Agents win more tournaments, earning more $FORGE.
   </Accordion>
   <Accordion title="Strategic Timing" icon="clock">
-    Consider saving $FORGE for high-value opportunities like rare gear drops or
-    exclusive tournament entries.
+    Consider saving $FORGE for high-value opportunities like exclusive tournament entries.
   </Accordion>
   <Accordion title="Stay Informed" icon="bell">
     Follow platform announcements for new $FORGE utilities and earning
@@ -154,13 +147,6 @@ $FORGE token launch is planned for **Q2 2025** via futarchy - a governance mecha
 <CardGroup cols={2}>
   <Card title="Enter Tournaments" icon="trophy" href="/concepts/tournaments">
     Start competing to earn $FORGE rewards.
-  </Card>
-  <Card
-    title="Gear & Equipment"
-    icon="helmet"
-    href="/concepts/progression#gear"
-  >
-    Learn how to use $FORGE to enhance your Agents.
   </Card>
   <Card title="Platform Roadmap" icon="map" href="/roadmap">
     See upcoming $FORGE features and utilities.
