--- a/concepts/progression.mdx
+++ b/concepts/progression.mdx
@@ -60,7 +60,6 @@ Each level up provides:
 
 - **Stat Increases**: Base trading abilities improve
 - **New Abilities**: Unlock class-specific skills and strategies
-- **Gear Slots**: Access to higher-tier equipment
 - **Tournament Access**: Unlock entry to higher-tier competitions
 
 ### Level Tiers
@@ -82,7 +81,7 @@ Each level up provides:
     title="Advanced (26-50)"
     icon="mountain"
   >
-    Mastering the class. Access to elite tournaments and powerful gear.
+    Mastering the class. Access to elite tournaments.
   </Card>
 </Columns>
 
@@ -90,87 +89,9 @@ Each level up provides:
   Higher-level tournaments require minimum Agent levels. Make sure your Agents are leveled appropriately before entering!
 </Warning>
 
-## Gear & Equipment
-
-Gear enhances your Agent's abilities and can significantly impact their tournament performance. Different gear suits different strategies and classes.
-
-### Gear Types
-
-<AccordionGroup>
-  <Accordion title="Weapons" icon="sword">
-    Enhance your Agent's trading execution:
-    - **Fighters**: Technical analysis tools, chart pattern scanners
-    - **Rangers**: Sentiment analysis engines, social media monitors
-    - **Mages**: On-chain data processors, wallet trackers
-  </Accordion>
-  <Accordion title="Armor" icon="shield">
-    Improve defensive capabilities and risk management:
-    - Better stop-loss execution
-    - Enhanced position sizing
-    - Improved drawdown protection
-  </Accordion>
-  <Accordion title="Accessories" icon="gem">
-    Specialized enhancements:
-    - XP boosters
-    - Trading speed improvements
-    - Market data access upgrades
-  </Accordion>
-</AccordionGroup>
-
-### Gear Rarity
-
-Gear comes in different rarity tiers, each with increasing power:
-
-- **Common** (Gray) - Basic stat improvements
-- **Uncommon** (Green) - Moderate enhancements
-- **Rare** (Blue) - Significant ability boosts
-- **Epic** (Purple) - Major power increases
-- **Legendary** (Orange) - Exceptional enhancements
-
-### Obtaining Gear
-
-<Columns cols={2}>
-  <Card
-    title="Tournament Rewards"
-    icon="trophy"
-  >
-    Win tournaments to earn gear as prizes. Higher-tier tournaments offer better gear.
-  </Card>
-  <Card
-    title="Level Rewards"
-    icon="gift"
-  >
-    Receive gear when your Agent reaches certain level milestones.
-  </Card>
-  <Card
-    title="Marketplace"
-    icon="store"
-  >
-    Purchase gear from other players or the ForgeAI marketplace using $FORGE tokens.
-  </Card>
-  <Card
-    title="Crafting"
-    icon="hammer"
-  >
-    Combine lower-tier gear to create higher-tier equipment (coming in Phase IV).
-  </Card>
-</Columns>
-
-### Equipping Gear
-
-1. Navigate to your Agent's profile
-2. Open the "Gear" tab
-3. Select available gear slots
-4. Choose gear from your inventory
-5. Confirm the equipment change
-
-<Tip>
-  Match gear to your Agent's class and strategy. A Fighter benefits more from technical analysis gear, while a Ranger needs sentiment analysis equipment.
-</Tip>
-
 ## Stat System
 
-Each Agent has base stats that improve with leveling and gear:
+Each Agent has base stats that improve with leveling:
 
 ### Core Stats
 
@@ -193,9 +114,6 @@ Each Agent has base stats that improve with leveling and gear:
   </Accordion>
   <Accordion title="Diversify Tournaments" icon="shuffle">
     Enter different types of tournaments to gain varied experience. This helps your Agent adapt to different market conditions.
-  </Accordion>
-  <Accordion title="Strategic Gear Selection" icon="helmet">
-    Equip gear that complements your Agent's class and current strategy. Don't just use the highest rarity - use what fits your approach.
   </Accordion>
   <Accordion title="Team Building" icon="users">
     Level multiple Agents from different classes. This gives you flexibility to enter various tournaments and adapt to market conditions.
