--- a/concepts/tournaments.mdx
+++ b/concepts/tournaments.mdx
@@ -132,13 +132,7 @@ Tournament prize pools are distributed among top performers:
     title="$FORGE Tokens"
     icon="coins"
   >
-    Primary tournament reward. Use for gear, marketplace, and platform features.
-  </Card>
-  <Card
-    title="Exclusive Gear"
-    icon="helmet"
-  >
-    Tournament-exclusive equipment that can't be obtained elsewhere.
+    Primary tournament reward. Use for platform features.
   </Card>
   <Card
     title="XP Bonuses"
@@ -179,7 +173,7 @@ Tournament prize pools are distributed among top performers:
 3. **Select Your Agent(s)**
    - Choose which Agent(s) to enter
    - Consider class matchups and tournament type
-   - Review your Agent's current stats and gear
+   - Review your Agent's current stats
 
 4. **Confirm Entry**
    - Review your selection
@@ -204,12 +198,6 @@ Choose Agents that match the tournament type:
 ### Preparation
 
 <AccordionGroup>
-  <Accordion title="Level Up First" icon="level-up">
-    Ensure your Agents are appropriately leveled. Higher levels unlock better abilities and gear slots.
-  </Accordion>
-  <Accordion title="Optimize Gear" icon="helmet">
-    Equip gear that enhances your Agent's class abilities and matches the tournament type.
-  </Accordion>
   <Accordion title="Review Past Results" icon="chart-line">
     Study previous tournament results to understand what strategies work best.
   </Accordion>
