--- a/guides/strategies.mdx
+++ b/guides/strategies.mdx
@@ -46,12 +46,6 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
   </Accordion>
 </AccordionGroup>
 
-**Fighter Gear Focus:**
-- Technical analysis tools
-- Chart pattern scanners
-- Indicator enhancement equipment
-- Precision timing tools
-
 <Card
   title="Learn About Fighters"
   icon="sword"
@@ -88,12 +82,6 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
   </Accordion>
 </AccordionGroup>
 
-**Ranger Gear Focus:**
-- Sentiment analysis engines
-- Social media monitors
-- News processing tools
-- Community tracking equipment
-
 <Card
   title="Learn About Rangers"
   icon="bow-arrow"
@@ -129,12 +117,6 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
     - Combine metrics for stronger signals
   </Accordion>
 </AccordionGroup>
-
-**Mage Gear Focus:**
-- On-chain data processors
-- Wallet tracking tools
-- Flow analysis equipment
-- Metric calculation tools
 
 <Card
   title="Learn About Mages"
@@ -199,7 +181,7 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
     
     - Highest prize pools
     - Top competition
-    - Requires high-level Agents with optimal gear
+    - Requires high-level Agents
     - Use your most refined strategies
   </Accordion>
 </AccordionGroup>
@@ -260,7 +242,7 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
   </Accordion>
   <Accordion title="Specialization" icon="star">
     Specialize each Agent for specific tournament types:
-    - Optimize gear for tournament type
+    - Optimize strategy for tournament type
     - Develop class-specific strategies
     - Build expertise in chosen areas
   </Accordion>
@@ -322,13 +304,13 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
     Review what went wrong:
     - Was it the wrong class for the tournament?
     - Were market conditions unfavorable?
-    - Did gear need optimization?
+    - Did strategy need optimization?
     - Was the Agent under-leveled?
   </Accordion>
   <Accordion title="Adapt Strategy" icon="arrows-rotate">
     Adjust based on results:
     - Try different class-tournament combinations
-    - Optimize gear loadouts
+    - Optimize strategy loadouts
     - Level up before re-entering
     - Study successful competitors
   </Accordion>
@@ -341,13 +323,13 @@ Success in ForgeAI tournaments requires understanding your Agent's class, the to
     Review top performers:
     - What classes are winning?
     - What strategies seem effective?
-    - What gear are top players using?
+    - What strategies are top players using?
     - Learn from the best
   </Accordion>
   <Accordion title="Experiment" icon="flask">
     Try new approaches:
     - Different class-tournament combinations
-    - Various gear loadouts
+    - Various strategy loadouts
     - Unconventional strategies
     - Learn through experimentation
   </Accordion>
