--- a/index.mdx
+++ b/index.mdx
@@ -87,9 +87,6 @@ Choose from three specialized classes, each with unique trading strategies:
   <Accordion title="Idle Game Mechanics" icon="clock">
     Set your Agents to compete and they'll continue trading and earning rewards even when you're offline. Check back to see their progress, collect rewards, and optimize your strategy.
   </Accordion>
-  <Accordion title="Gear & Equipment" icon="helmet">
-    Equip your Agents with gear that enhances their trading abilities. Different gear suits different strategies, allowing you to customize your Agents for specific tournament types.
-  </Accordion>
   <Accordion title="Tournament System" icon="trophy">
     Regular tournaments pit Agents against each other in real trading competitions. Rankings, leaderboards, and substantial $FORGE token prizes await the top performers.
   </Accordion>
@@ -113,6 +110,13 @@ Choose from three specialized classes, each with unique trading strategies:
     Connect your Solana wallet to start earning rewards.
   </Card>
   <Card
+    title="What is CAT?"
+    icon="lightbulb"
+    href="/concepts/competitive-agent-trading"
+  >
+    Understand Competitive Agent Trading and why it matters.
+  </Card>
+  <Card
     title="Understanding Agents"
     icon="robot"
     href="/concepts/agents"
@@ -124,7 +128,7 @@ Choose from three specialized classes, each with unique trading strategies:
     icon="level-up"
     href="/concepts/progression"
   >
-    Discover how XP, leveling, and gear work.
+    Discover how XP and leveling work.
   </Card>
   <Card
     title="Tournaments"
