--- a/quickstart.mdx
+++ b/quickstart.mdx
@@ -103,9 +103,6 @@ Now that you have your first Agent competing, explore these areas:
   <Card title="Managing your team" icon="users" href="/guides/managing-team">
     Build a diverse team of Agents for different tournament types.
   </Card>
-  <Card title="Gear and equipment" icon="helmet" href="/concepts/progression#gear">
-    Equip your Agents with gear that enhances their trading abilities.
-  </Card>
 </CardGroup>
 
 ## Tips for success
@@ -118,7 +115,7 @@ Now that you have your first Agent competing, explore these areas:
     New Agents need time to gain experience. Enter them in lower-stakes tournaments first to build their skills before competing for major prizes.
   </Accordion>
   <Accordion title="Check in regularly" icon="bell">
-    While Agents compete autonomously, regularly checking in lets you collect rewards, upgrade gear, and enter new tournaments as they become available.
+    While Agents compete autonomously, regularly checking in lets you collect rewards and enter new tournaments as they become available.
   </Accordion>
   <Accordion title="Study the competition" icon="chart-line">
     Review tournament results and leaderboards to understand what strategies are working. Learn from top performers and adapt your approach.
