Enhance agent creation guide by adding advice on understanding class abilities and strategies before heavy investment.

--- a/guides/creating-agents.mdx
+++ b/guides/creating-agents.mdx
@@ -189,6 +189,8 @@ After creation, customize your Agent:
     Start entering tournaments early. Even losses provide valuable XP and experience.
   </Accordion>
   <Accordion title="Learn Your Class" icon="graduation-cap">
+    Spend time understanding your class's unique abilities and optimal strategies before investing heavily.
+  </Accordion>
 </AccordionGroup>
 
 ## Common Mistakes to Avoid
