--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -144,6 +144,101 @@ Common HTTP status codes you may encounter:
 | `429` | Rate limited — too many requests |
 | `500` | Server error — something went wrong |
 
+## Quick Start Example
+
+Here's a complete example showing how to start and stop an agent using the API:
+
+<CodeGroup>
+
+```javascript JavaScript
+// Example: Control agent from a Node.js script
+async function toggleAgent(agentId, action) {
+  const token = process.env.FORGEAI_TOKEN; // Your Privy JWT
+  
+  const response = await fetch(
+    `https://app.forgeai.gg/api/v1/agents/${agentId}/${action}`,
+    {
+      method: 'POST',
+      headers: {
+        'Authorization': `Bearer ${token}`,
+        'Content-Type': 'application/json'
+      }
+    }
+  );
+  
+  if (!response.ok) {
+    const error = await response.json();
+    throw new Error(error.message);
+  }
+  
+  return response.json();
+}
+
+// Start an agent
+await toggleAgent('agent_abc123', 'start');
+
+// Stop an agent
+await toggleAgent('agent_abc123', 'stop');
+```
+
+```python Python
+import os
+import requests
+
+def toggle_agent(agent_id: str, action: str) -> dict:
+    """Start or stop an agent via the ForgeAI API."""
+    token = os.environ.get('FORGEAI_TOKEN')
+    
+    response = requests.post(
+        f'https://app.forgeai.gg/api/v1/agents/{agent_id}/{action}',
+        headers={
+            'Authorization': f'Bearer {token}',
+            'Content-Type': 'application/json'
+        }
+    )
+    response.raise_for_status()
+    return response.json()
+
+# Start an agent
+toggle_agent('agent_abc123', 'start')
+
+# Stop an agent  
+toggle_agent('agent_abc123', 'stop')
+```
+
+```bash cURL
+# Start an agent
+curl -X POST "https://app.forgeai.gg/api/v1/agents/agent_abc123/start" \
+  -H "Authorization: Bearer $FORGEAI_TOKEN" \
+  -H "Content-Type: application/json"
+
+# Stop an agent
+curl -X POST "https://app.forgeai.gg/api/v1/agents/agent_abc123/stop" \
+  -H "Authorization: Bearer $FORGEAI_TOKEN" \
+  -H "Content-Type: application/json"
+```
+
+</CodeGroup>
+
+### Polling Agent Status
+
+Since the API is expanding, a common pattern is to poll for agent status after starting:
+
+```javascript
+async function waitForAgentActive(agentId, maxAttempts = 10) {
+  for (let i = 0; i < maxAttempts; i++) {
+    const agent = await getAgent(agentId); // Future endpoint
+    if (agent.status === 'active') return agent;
+    await new Promise(r => setTimeout(r, 2000)); // Wait 2 seconds
+  }
+  throw new Error('Agent did not become active in time');
+}
+```
+
+<Info>
+Agent status endpoints are coming soon. For now, check the ForgeAI dashboard to verify agent state after API calls.
+</Info>
+
 ## SDKs and Libraries
 
 Official SDKs are coming soon. In the meantime, you can use the OpenAPI specification to generate clients for your preferred language using tools like:
