--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -25,11 +25,13 @@ https://app.forgeai.gg/api/v1
 
 ## Authentication
 
-The ForgeAI API uses [Privy](https://privy.io) for authentication. All endpoints require a valid JWT token.
+The ForgeAI API supports two authentication methods depending on the endpoint type.
 
-### Getting a Token
+### JWT Authentication (User Endpoints)
 
-If you're building a frontend application, authenticate with Privy and retrieve the access token:
+Endpoints under `/agents/*` and `/tournaments` use [Privy](https://privy.io) for authentication and require a valid JWT token.
+
+**Getting a Token:**
 
 ```javascript
 import { usePrivy } from '@privy-io/react-auth';
@@ -38,9 +40,7 @@ const { getAccessToken } = usePrivy();
 const token = await getAccessToken();
 ```
 
-### Using the Token
-
-Include the token in the `Authorization` header:
+**Using the Token:**
 
 ```bash
 Authorization: Bearer <your-privy-jwt-token>
@@ -52,7 +52,42 @@ For browser-based requests from the ForgeAI domain, the token can also be sent v
 Never share your JWT tokens or store them in client-side code. Tokens should be fetched fresh for each session.
 </Warning>
 
+### API Key Authentication (Public Data Endpoints)
+
+Endpoints under `/public/*` use API key authentication, designed for server-to-server integrations, dashboards, and automated systems.
+
+**Using API Keys:**
+
+```bash
+X-API-Key: your-api-key
+```
+
+<CodeGroup>
+
+```bash cURL
+curl -X GET "https://app.forgeai.gg/api/v1/public/agents" \
+  -H "X-API-Key: your-api-key"
+```
+
+```javascript JavaScript
+const response = await fetch('https://app.forgeai.gg/api/v1/public/agents', {
+  headers: {
+    'X-API-Key': process.env.FORGEAI_API_KEY
+  }
+});
+```
+
+</CodeGroup>
+
+<Tip>
+Use API key authentication for backend services, Discord bots, monitoring dashboards, and any integration that doesn't require user-specific context.
+</Tip>
+
 ## Available Endpoints
+
+### Agent Control (JWT Authentication)
+
+These endpoints require Privy JWT authentication and allow you to control your agents.
 
 <CardGroup cols={2}>
   <Card title="Start Agent" icon="play" href="/api-reference/endpoint/start-agent">
@@ -67,8 +102,45 @@ Never share your JWT tokens or store them in client-side code. Tokens should be 
   </Card>
 </CardGroup>
 
+### Tournaments (JWT Authentication)
+
+<CardGroup cols={1}>
+  <Card title="List Tournaments" icon="trophy" href="/api-reference/endpoint/list-tournaments">
+    `GET /tournaments`
+    
+    Browse and search available tournaments with filtering and pagination
+  </Card>
+</CardGroup>
+
+### Public Data API (API Key Authentication)
+
+These endpoints use API key authentication (`X-API-Key` header) and are designed for machine-to-machine integrations, dashboards, and services that don't require user context.
+
+<CardGroup cols={2}>
+  <Card title="Public Agents" icon="robot" href="/api-reference/endpoint/public-agents">
+    `GET /public/agents`
+    
+    List agents with filtering by status, class, and model
+  </Card>
+  <Card title="Public Positions" icon="chart-line" href="/api-reference/endpoint/public-positions">
+    `GET /public/positions`
+    
+    Query trading positions and P&L data
+  </Card>
+  <Card title="Public Activities" icon="clock" href="/api-reference/endpoint/public-activities">
+    `GET /public/activities`
+    
+    Retrieve agent activity feeds and trade history
+  </Card>
+  <Card title="Public Tournaments" icon="trophy" href="/api-reference/endpoint/public-tournaments">
+    `GET /public/tournaments`
+    
+    Browse tournaments without user authentication
+  </Card>
+</CardGroup>
+
 <Note>
-The public API is actively expanding. Additional endpoints for agent creation, strategy configuration, and tournament management are planned for future releases.
+The public API is actively expanding. Additional endpoints for agent creation, strategy configuration, and more are planned for future releases.
 </Note>
 
 ## Request Format
